# gdassetsmanager

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.MD  main.cpp  toolchain-windows.cmake
include/: GDAssimpIOStream.hpp  GDAssimpLoader.hpp  GDAudioStream.hpp  GDAudioWaveRenderer.hpp  GDError.hpp  GDFilewatcher.hpp  GDNativeFileDialog.hpp  NativeFileDialog.hpp
include/AudioLoaders/: DRAudioLoader.hpp  FlacAudioLoader.hpp  IAudioLoader.hpp  Mp3AudioLoader.hpp  OggAudioLoader.hpp  WavAudioLoader.hpp
src/: GDAssimpIOStream.cpp  GDAssimpLoader.cpp  GDAudioStream.cpp  GDAudioWaveRenderer.cpp  GDFilewatcher.cpp  GDNativeFileDialog.cpp  NativeFileDialog.cpp
src/AudioLoaders/: DRAudioLoader.cpp  FlacAudioLoader.cpp  Mp3AudioLoader.cpp  OggAudioLoader.cpp  WavAudioLoader.cpp
